Fix memory settings for PhoenixRDDTest on JDK 1.7